--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,11 @@ dependencies:
   provider: ^6.0.4
   google_fonts: ^3.0.1
   intl: ^0.17.0
+  logger: ^1.1.0
+  firebase_core: ^2.1.1
+  firebase_auth: ^4.1.1
+  modal_progress_hud_nsn: ^0.3.0
+  cloud_firestore: ^4.0.5
 
 dev_dependencies:
   flutter_test:
@@ -88,6 +93,11 @@ flutter:
     - lib/assets/item.json
     - lib/assets/img/logo.png
     - lib/assets/img/img.png
+    - background.png
+    - logo.png
+    - logotext.png
+    - logowithback.png
+
 
   # example:
   # fonts:
